--- a/Release_Notes.html
+++ b/Release_Notes.html
@@ -38,9 +38,18 @@
 <div class="col-sm-12 col-lg-8">
 <h1 id="update-history">Update History</h1>
 <div class="collapse">
-<input type="checkbox" id="collapse-section22" checked aria-hidden="true"> <label for="collapse-section22" aria-hidden="true">V1.0.1 / 03-April-2019</label>
+<input type="checkbox" id="collapse-section23" checked aria-hidden="true"> <label for="collapse-section23" aria-hidden="true">V1.0.2 / 31-October-2025</label>
 <div>
 <h2 id="main-changes">Main Changes</h2>
+<ul>
+<li>Convert raw temperature by casting <code>tmp</code> to <code>int16_t</code> for negative values accuracy.</li>
+</ul>
+</div>
+</div>
+<div class="collapse">
+<input type="checkbox" id="collapse-section22" aria-hidden="true"> <label for="collapse-section22" aria-hidden="true">V1.0.1 / 03-April-2019</label>
+<div>
+<h2 id="main-changes-1">Main Changes</h2>
 <ul>
 <li>Update release notes format</li>
 <li>Reformat the BSD 3-Clause license declaration in the files header (replace license terms by a web reference to OSI website where those terms lie)</li>
@@ -50,7 +59,7 @@
 <div class="collapse">
 <input type="checkbox" id="collapse-section19" aria-hidden="true"> <label for="collapse-section19" aria-hidden="true">V1.0.0 / 14-February-2017</label>
 <div>
-<h2 id="main-changes-1">Main Changes</h2>
+<h2 id="main-changes-2">Main Changes</h2>
 <ul>
 <li>First official release of LPS22HB Temperature/Pressure sensor</li>
 </ul>
